EXTRA_DIST =                                   \
       arr_script                              \
       packet_byte_script                      \
       sctp_stream_script                      \
       snapshot_script                         \
       tcp_range_script                        \
       tcp_rr_script                           \
       tcp_stream_script                       \
       udp_rr_script                           \
       udp_stream_script \
	bloat.sh \
	runemomniaggdemo.sh \
	runemomniagg2.sh \
	runemomni.sh
	netperf_by_flavor.py \
	post_proc.py \
	find_max_burst.sh

